Правки после ревью
1. Удалил мусор;
2. Зашифровал доступ через ansible-vault и положил их в репозиторий;
3. Переделал установку nodejs на на декларативный подход;
4. Убрал из Inventory  переменную. Задал там IP (в правках требовалось задавать хост, но где настроить DNS для создаваемой ВМ - мне непонятно)

--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -3,8 +3,8 @@ all:
     sausage_store_backend:
       hosts:
         backend:
-          ansible_host: "{{ mv_sausage_store_ip }}"
+          ansible_host: 51.250.92.176
     sausage_store_frontend:
       hosts:
         frontend:
-          ansible_host: "{{ mv_sausage_store_ip }}"
+          ansible_host: 51.250.92.176
