--- a/kubernetes/frontend/deployment.yaml
+++ b/kubernetes/frontend/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-frontend:latest
+          image: "gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-frontend:latest"
           ports:
             - name: frontend
               containerPort: 80
