--- a/kubernetes/frontend/configmap.yaml
+++ b/kubernetes/frontend/configmap.yaml
@@ -12,4 +12,7 @@ data:
         index  index.html;
         try_files $uri $uri/ /index.html;
       }
+     location /api {
+      proxy_pass http://backend:8080;
+        }
     }
