--- a/kubernetes/.gitlab-ci.yml
+++ b/kubernetes/.gitlab-ci.yml
@@ -21,7 +21,10 @@ deploy:
     - scp $KUBE_CONFIG $ENV_USER@$ENV_HOST:~/.kube/config
     - envsubst < ./kubernetes/backend/deployment.yaml > ./kubernetes/backend/deployment.yaml
     - envsubst < ./kubernetes/backend-report/deployment.yaml > ./kubernetes/backend-report/deployment.yaml
+    - envsubst < ./kubernetes/secrets.yaml > ./kubernetes/secrets.yaml
     - scp -rC ./kubernetes $ENV_USER@$ENV_HOST:~/kubernetes
+    - echo "${CI_REGISTRY_USER} ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}" > test.txt
+    - scp -rC ./test.txt $ENV_USER@$ENV_HOST:~/kubernetes/test.txt
   script:
     - ssh $ENV_USER@$ENV_HOST kubectl apply -f /home/$ENV_USER/kubernetes/backend
     - ssh $ENV_USER@$ENV_HOST kubectl apply -f /home/$ENV_USER/kubernetes/backend-report
