--- a/kubernetes/.gitlab-ci.yml
+++ b/kubernetes/.gitlab-ci.yml
@@ -19,8 +19,10 @@ deploy:
     - chmod 644 ~/.ssh/known_hosts
     - command -v envsubst >/dev/null || ( apt-get update -y && apt-get install gettext-base -y )
     - scp $KUBE_CONFIG $ENV_USER@$ENV_HOST:~/.kube/config
+    - cat ./kubernetes/backend/deployment.yaml
     - envsubst < ./kubernetes/backend/deployment.yaml > ./kubernetes/backend/deployment.yaml
     - envsubst < ./kubernetes/backend-report/deployment.yaml > ./kubernetes/backend-report/deployment.yaml
+    - cat ./kubernetes/backend/deployment.yaml
     - scp -rC ./kubernetes $ENV_USER@$ENV_HOST:~/kubernetes
     - ssh $ENV_USER@$ENV_HOST kubectl delete secret docker-config-secret --ignore-not-found=true
     - ssh $ENV_USER@$ENV_HOST kubectl create secret docker-registry docker-config-secret --docker-server=${CI_REGISTRY} --docker-username=std-025-75 --docker-password=7q2g4NSw
