--- a/kubernetes/backend-report/deployment.yaml
+++ b/kubernetes/backend-report/deployment.yaml
@@ -22,6 +22,6 @@ spec:
               containerPort: 80
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: $SPRING_DATA_MONGODB_URI
+              value: "$SPRING_DATA_MONGODB_URI"
       imagePullSecrets:
         - name: docker-config-secret
