--- a/kubernetes/backend-report/deployment.yaml
+++ b/kubernetes/backend-report/deployment.yaml
@@ -19,9 +19,9 @@ spec:
           image: "gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-backend-report:latest"
           ports:
             - name: backend-report
-              containerPort: 80
+              containerPort: 8080
           env:
             - name: SPRING_DATA_MONGODB_URI
-              value: "$SPRING_DATA_MONGODB_URI"
+              value: $SPRING_DATA_MONGODB_URI
       imagePullSecrets:
         - name: docker-config-secret
