--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -22,13 +22,25 @@ spec:
               containerPort: 80
           env:
             - name: SPRING_DATASOURCE_URL
-              value: $SPRING_DATASOURCE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_URL
             - name: SPRING_DATASOURCE_USERNAME
-              value: $SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_USERNAME
             - name: SPRING_DATASOURCE_PASSWORD
-              value: $SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: SPRING_DATA_MONGODB_URI
-              value: $SPRING_DATA_MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATA_MONGODB_URI
             - name: REPORT_PATH
               value: "/var/sausage-store/reports/"
       imagePullSecrets:
