--- a/kubernetes/.gitlab-ci.yml
+++ b/kubernetes/.gitlab-ci.yml
@@ -13,7 +13,7 @@ deploy:
   before_script:
     - export KUBECONFIG=$KUBE_CONFIG
   script:
-    - kubectl apply -f kubernetes/secrets.yaml
+    - kubectl apply -f $SECRETS
     - kubectl apply -f kubernetes/backend
     - kubectl apply -f kubernetes/backend-report
     - kubectl apply -f kubernetes/frontend
