--- a/kubernetes/backend-report/deployment.yaml
+++ b/kubernetes/backend-report/deployment.yaml
@@ -15,6 +15,16 @@ spec:
       labels:
         app: backend-report
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - backend-report
+              topologyKey: kubernetes.io/hostname
       containers:
         - name: backend-report
           image: "gitlab.praktikum-services.ru:5050/std-025-75/sausage-store/sausage-backend-report:latest"
