--- a/kubernetes/backend-report/deployment.yaml
+++ b/kubernetes/backend-report/deployment.yaml
@@ -32,10 +32,29 @@ spec:
             - name: backend-report
               containerPort: 8080
           env:
+            - name: SPRING_DATASOURCE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_URL
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_USERNAME
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: ss-secrets
+                  key: SPRING_DATASOURCE_PASSWORD
             - name: SPRING_DATA_MONGODB_URI
               valueFrom:
                 secretKeyRef:
                   name: ss-secrets
                   key: SPRING_DATA_MONGODB_URI
+            - name: REPORT_PATH
+              value: "/var/sausage-store/reports/"
+            - name: PORT
+              value: "8080"
       imagePullSecrets:
         - name: docker-config-secret
