--- a/sausage-store-chart/charts/backend-report/templates/hp-autoscale.yaml
+++ b/sausage-store-chart/charts/backend-report/templates/hp-autoscale.yaml
@@ -11,7 +11,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: backend-report
+    name: backend-report-{{ .Release.Name }}
   metrics:
     - type: Resource
       resource:
