--- a/sausage-store-chart/charts/backend/templates/deployment.yaml
+++ b/sausage-store-chart/charts/backend/templates/deployment.yaml
@@ -20,6 +20,10 @@ spec:
     metadata:
       labels:
         app: backend
+      annotations:
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/port: "8080"
+        prometheus.io/scrape: "true"
     spec:
       containers:
         - name: backend
